--- a/LoginDemo/src/main/res/values/strings.xml
+++ b/LoginDemo/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="login_by_phone_number">手机号登录</string>
     <string name="country_or_region">国家/地区</string>
     <string name="china_mainland">中国大陆</string>
-    <string name="phone_number">手机号</string>
+    <string name="mobile_number">手机号</string>
     <string name="enter_phone_number">请填写手机号</string>
     <string name="login_tip">上述手机号仅用于登录验证</string>
     <string name="agree_and_continue">同意并继续</string>
@@ -32,4 +32,6 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="enter_password">请输入密码</string>
+    <string name="password">密码</string>
 </resources>
