--- a/LoginDemo/src/main/res/values/strings.xml
+++ b/LoginDemo/src/main/res/values/strings.xml
@@ -30,8 +30,9 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="title_wechat_home">微信</string>
-    <string name="title_dashboard">通讯录</string>
-    <string name="title_notifications">发现</string>
+    <string name="title_address_book">通讯录</string>
+    <string name="title_find">发现</string>
+    <string name="title_profile">我</string>
     <string name="enter_password">请输入密码</string>
     <string name="password">密码</string>
 </resources>
