--- a/LoginDemo/src/main/res/values/strings.xml
+++ b/LoginDemo/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="sign_up">&#032;注册&#032;</string>
     <string name="login_by_phone_number">手机号登录</string>
     <string name="country_or_region">国家/地区</string>
-    <string name="china_mainland">中国大陆</string>
+    <string name="china_mainland">中国大陆(+86)</string>
     <string name="mobile_number">手机号</string>
     <string name="enter_phone_number">请填写手机号</string>
     <string name="login_tip">上述手机号仅用于登录验证</string>
