--- a/MyWeChat/src/main/res/values/strings.xml
+++ b/MyWeChat/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">LoginDemo</string>
+    <string name="app_name">MyWeChat</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
